--- a/HTML&CSS/Style.css
+++ b/HTML&CSS/Style.css
@@ -130,7 +130,7 @@ main {
     align-items: center;
 }
 
-.home .home-image img {
+.home .home-image {
     position:absolute;
     Left:0;
     Top:0;
@@ -302,13 +302,13 @@ body:not(.mobile) .hover-title-2:hover + .hover-image-2 {
 
 @media(max-width: 992px) {
     .about .about-text {
-        font-size: 3.5rem;
+        font-size: 1.7rem;
     }
 }
 
 @media(max-width: 576px) {
     .about .about-text {
-        font-size: 2.5 rem;
+        font-size: 1.4 rem;
     }
 }
 
@@ -357,6 +357,11 @@ body:not(.mobile) .hover-title-2:hover + .hover-image-2 {
     font-size: 1rem;
     line-height: 1.5rem;
 }
+
+main.project {
+    Margin-top:0;
+}
+
 .project img {
     width:100%;
 }
@@ -384,7 +389,7 @@ body:not(.mobile) .hover-title-2:hover + .hover-image-2 {
 }
 
 .project .project-content {
-    margin-top: -3.0rem;
+    margin-top: 0.1rem;
 }
 
 .project .project-title {
@@ -449,8 +454,20 @@ body:not(.mobile) .hover-title-2:hover + .hover-image-2 {
     line-height:122%;
     /*line-height:145%;*/
     /*line-height:2.6rem;*/
-    margin-top: -4.5rem;
 }
+
+@media(max-width: 992px) {
+    .project .project-description {
+        font-size: 1.7rem;
+    }
+}
+
+@media(max-width: 576px) {
+    .project .project-description {
+        font-size: 1.4 rem;
+    }
+}
+
 
 .project .project-description::selection {
     color: var(--white);
@@ -467,16 +484,30 @@ body:not(.mobile) .hover-title-2:hover + .hover-image-2 {
 }
 
 .project .background-image-fadein {
-    position:absolute;
     top:0%;
     Left:0%;
+    object-position:center;
     object-fit:cover;
     width:100%;
-    height:100%;
+    height:calc(33vh);
     /*animation: 1s linear forwards fadeInAnimation;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;*/
 }
+
+@media (min-width: 576px) {
+    .project .background-image-fadein {
+        height:calc(50vh);
+    }
+}
+
+
+@media (min-width: 992px) {
+    .project .background-image-fadein {
+        height:calc(100vh);
+    }
+}
+
 
 /* FOOTER */
 footer {
