--- a/HTML&CSS/Style.css
+++ b/HTML&CSS/Style.css
@@ -424,7 +424,14 @@ main.project {
 
 @media (max-width: 992px) {
     .project .project-data {
-        font-size:2.1rem;
+        font-size:3.1rem;
+        margin-top:0.3rem;
+    }
+
+    .project .project-description {
+        margin-bottom:3rem;
+        font-size:3.1rem;
+        line-height:122%;
     }
 }
 
