--- a/HTML&CSS/Style.css
+++ b/HTML&CSS/Style.css
@@ -8,7 +8,7 @@
 :root {
     --black: #000000;
     --white: #ffffff;
-    --color3: #ff008c;
+    --color3: #cac9cf;
     --true-black: #000000;
 }
 
@@ -47,12 +47,13 @@ body {
 
 a {
     color: inherit;
-    text-decoration: underline;
-    text-underline-offset:5%;
+    text-decoration: none;
+    Filter: none;
+    Transition:0.3s;
 }
 
 a:hover {
-    color: var(--color3);
+    Filter: blur(3px);
 }
 
 
@@ -68,18 +69,43 @@ header {
     justify-content: space-between;
     align-items: center;
 
-    height: 4rem;
+    height: 3.2rem;
     padding-top:0;
     padding-bottom:0;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
 
     background-color: transparent;
 
-    font-size: 1rem;
-    text-transform: capitalise;
+    font-size: 0.9rem;
+    text-transform: uppercase;
 
     z-index: 100;
+}
+
+header div:first-child {
+    text-align:left;
+}
+
+header div:nth-child(2) {
+    text-align:center;
+}
+
+header div:nth-child(2) a {
+    Margin-left:0.5rem;
+    Margin-right:0.5rem;
+}
+
+header div:nth-child(3) {
+    Text-align:right;
+}
+
+
+.header-divisor {
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    Color:inherit;
 }
 
 @media (max-width: 992px) {
@@ -97,6 +123,7 @@ header {
 
 header a {
     text-decoration: none;
+    color:inherit;
 }
 
 header svg {
@@ -110,7 +137,7 @@ header svg:hover path {
 }
 
 header a:hover {
-    color: var(--color3);
+    color:inherit;
 }
 
 header nav ul {
@@ -176,6 +203,16 @@ main {
     margin-bottom: 1.5rem;
 }
 
+.projects .card-link:hover {
+    filter:none;
+}
+
+.projects .card-link:hover .card-container {
+    filter:blur(3px);
+}
+
+
+
 
 /*
 .projects .card-image {
@@ -203,25 +240,30 @@ main {
 }*/
 
 
+.projects .card-container {
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    width=100%;
+    font-size: 0.9rem;
+    margin-bottom: 4rem;
+    margin-top: 0.7rem;
+    Margin-left:0rem;
+    Margin-right:0rem;
+}
 .projects .card-title {
-    font-size: 1rem;
-    margin-bottom: .3rem;
-    margin-top: 1rem;
+    Text-transform:uppercase;
 }
 
 .projects .card-description {
-    font-size: 1rem;
     color:var(--black);
-    margin-bottom: 4rem;
 }
 
 .projects .card-title::selection {
-    color: var(--white);
     background: var(--color3);
 }
 
 .projects .card-description::selection {
-    color: var(--white);
     background: var(--color3);
 }
 
@@ -229,7 +271,7 @@ main {
 
 .projects .artwork-image {
     position: relative;
-    padding-bottom: 65%;
+    padding-bottom: 100%;
     margin-bottom: .5rem;
     background-size: contain;
     background-position: center;
@@ -239,10 +281,6 @@ main {
 .artworks .card-title {
     font-size:0.7rem;
     margin-top: 0.5rem;
-}
-
-.artworks {
-    color:white;
 }
 
 /* NEW PROJECTS PAGE */
@@ -350,18 +388,16 @@ body:not(.mobile) .hover-title-2:hover + .hover-image-2 {
     background-color: var(--color3);
 }
 
-.about .about-text::selection {
-    color: var(--white);
-    background: var(--color3);
+.about-socials-header {
+    text-transform:uppercase;
+    color:var(--color3);
 }
 
-.about .section-title::selection {
-    color: var(--white);
-    background: var(--color3);
+.about-socials-header::selection {
+    color:var(--white);
 }
 
-.about .section-content::selection {
-    color: var(--white);
+::selection {
     background: var(--color3);
 }
 
@@ -416,16 +452,36 @@ main.project {
     }
 }
 
+.project .project-image-container {
+    margin-left:1rem;
+    margin-right:1rem;
+    margin-top:3.2rem;
+}
+
 .project .project-data {
-    Font-size:1.2rem;
+    Font-size:0.9rem;
     line-height:2.6rem;
-    Margin-bottom:8rem;
+    Margin-bottom:3rem;
+    Margin-top:0.4rem;
+}
+
+.project .project-data div:first-child {
+    Text-align:left;
+    text-transform:uppercase;
+}
+
+.project .project-data div:nth-child(2) {
+    Text-align:center;
+}
+
+.project .project-data div:nth-child(3) {
+    Text-align:right;
 }
 
 .project .project-data-footer {
-    font-size:1rem;
+    font-size:0.9rem;
     line-height:122%;
-    margin-top:8.5rem;
+    margin-top:3rem;
 }
 
 .project .project-gallery img {
@@ -474,7 +530,12 @@ main.project {
     background: var(--color3);
 }
 
-@media (max-width: 992px) {
+sup {
+    Font-size:60%;
+    Text-transform:uppercase;
+}
+
+@media(max-width: 992px) {
     .project .project-data {
         font-size:3.1rem;
         margin-top:0.3rem;
@@ -496,11 +557,9 @@ main.project {
 }
 
 .project .background-image-fadein {
-    top:0%;
-    Left:0%;
     object-position:center;
     object-fit:cover;
-    width:100%;
+    Width:100%;
     height:calc(25vh);
     /*animation: 1s linear forwards fadeInAnimation;
     animation-iteration-count: 1;
@@ -516,7 +575,7 @@ main.project {
 
 @media (min-width: 992px) {
     .project .background-image-fadein {
-        height:calc(100vh);
+        height:calc(100vh - 6.4rem);
     }
 }
 
@@ -541,7 +600,6 @@ footer ul {
 
 
 footer .contact::selection {
-    color: var(--white);
     background: var(--color3);
 }
 
@@ -553,12 +611,12 @@ footer .contact::selection {
     display: inline;
     pointer-events: auto;
     cursor: pointer;
-    text-decoration: underline;
-    text-underline-offset:5%;
+    Filter: blur(4px);
+    Transition:0.3s;
 }
 
 .hover-title:hover {
-    Color: var(--color3);
+    Filter: none;
 }
 
 .hover-image {
@@ -593,4 +651,11 @@ body:not(.mobile) .hover-title:hover + .hover-image {
     margin-bottom: 0;
 }
 
-.
+
+.grey {
+    color: var(--color3);
+}
+
+.grey:hover {
+    color: var(--color3);
+}
